fix z-index

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -45,7 +45,7 @@
             }
             .videoInner {
                 display: flex;
-                z-index: -1;
+                z-index: 0;
                 flex-direction: row;
                 justify-content: center;
                 gap: 16px;
